--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>odin-recipes</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/grain-pancakes.html">Dad's Double Whole Grain Pancakes</a></li>
+    </ul>
 </body>
 </html>
