--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dad's Double Whole Grain Pancakes</title>
-    <h1>Dad's Double Whole Grain Pancakes</h1>
 </head>
 <body>
-    
+    <h1>Dad's Double Whole Grain Pancakes</h1>
+    <img src="../images/grain-pancakes.webp" alt="">
+
+    <h3>Dad's Double Whole Grain Pancakes Description</h3>
+    <p>My dad makes these pancakes. They are the BEST!</p>
 </body>
 </html>
