--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -17,15 +17,15 @@
 
     <ul>
         <li>1 cup all-purpose flour</li>
-        <li>1 ⅓ cups dry milk powder</li>
+        <li>1 <sup>1/3</sup> cups dry milk powder</li>
         <li>1 teaspoon baking powder</li>
-        <li>1 ½ teaspoons baking soda</li>
+        <li>1 <sup>1/2</sup> teaspoons baking soda</li>
         <li>1 teaspoon salt</li>
         <li>2 cups whole wheat flour</li>
-        <li>¾ cup white sugar</li>
+        <li> <sup>3/4</sup> cup white sugar</li>
         <li>4 eggs, lightly beaten</li>
         <li>3 cups water</li>
-        <li>¼ cup butter, melted</li>
+        <li> <sup>1/4</sup> cup butter, melted</li>
         <li>3 tablespoons vinegar</li>
     </ul>
 </body>
