--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -10,10 +10,11 @@
     <h1>Dad's Double Whole Grain Pancakes</h1>
     <img src="../images/grain-pancakes.webp" alt="">
 
-    <h3>Dad's Double Whole Grain Pancakes Description</h3>
-    <p>My dad makes these pancakes. They are the BEST!</p>
+    <h2>Dad's Double Whole Grain Pancakes Description</h2>
+    <p>My dad makes these pancakes. They are the BEST! It's prepared in 15 minutes, 20 minutes cook time and can yield to 28 pancakes. Enjoy!</p>
 
-    <h5>Ingregients</h5>
+
+    <h3>Ingregients</h3>
 
     <ul>
         <li>1 cup all-purpose flour</li>
@@ -28,5 +29,13 @@
         <li> <sup>1/4</sup> cup butter, melted</li>
         <li>3 tablespoons vinegar</li>
     </ul>
+
+    <h3>Directions</h3>
+
+    <ol>
+        <li>In a large bowl, sift all-purpose flour, milk powder, baking powder, baking soda and salt. Stir in whole wheat flour. In a small bowl, combine sugar, eggs, water, butter and vinegar. Make a well in the flour mixture, and pour in the egg mixture. Mix until smooth.</li>
+        <br>
+        <li>Heat a lightly oiled griddle or frying pan over medium heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. Cook until pancakes are golden brown on both sides; serve hot.</li>
+    </ol>
 </body>
 </html>
