--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -7,12 +7,16 @@
     <title>Dad's Double Whole Grain Pancakes</title>
 </head>
 <body>
+
+    <!-- Heading -->
+
     <h1>Dad's Double Whole Grain Pancakes</h1>
     <img src="../images/grain-pancakes.webp" alt="">
 
     <h2>Dad's Double Whole Grain Pancakes Description</h2>
     <p>My dad makes these pancakes. They are the BEST! It's prepared in 15 minutes, 20 minutes cook time and can yield to 28 pancakes. Enjoy!</p>
 
+    <!-- Description -->
 
     <h3>Ingregients</h3>
 
@@ -29,6 +33,8 @@
         <li> <sup>1/4</sup> cup butter, melted</li>
         <li>3 tablespoons vinegar</li>
     </ul>
+
+    <!-- Recipe preparation steps -->
 
     <h3>Directions</h3>
 
