--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/grain-pancakes.html">Dad's Double Whole Grain Pancakes</a></li>
+        <li><a href="./recipes/banana-bread.html">Banana Bread</a></li>
     </ul>
 </body>
 </html>
