--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -7,6 +7,38 @@
     <title>Banana bread</title>
 </head>
 <body>
+
+    <!-- Heading -->
+
     <h1>Banana Bread</h1>
+    <img src="../images/banana-bread.webp" alt="">
+
+    <h2>Banana bread Description</h2>
+    <p>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</p>
+
+    <!-- Description -->
+
+    <h3>Ingregients</h3>
+
+    <ul>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li><sup>1/4</sup> cups dry milk powder</li>
+        <li> <sup>3/4</sup> cup brown sugar</li>
+        <li> <sup>1/2</sup> cup butter</li>
+        <li>2 eggs, beaten</li>
+        <li>2<sup>1/3</sup> cups mashed overripe bananas</li>
+    </ul>
+
+    <!-- Recipe preparation steps -->
+
+    <h3>Directions</h3>
+
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
+        <br>
+        <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. Pour batter into the prepared loaf pan.</li>
+        <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes. Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely.</li>
+    </ol>
 </body>
 </html>
