Edit index.html and grain-pancakes.html

--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -10,11 +10,11 @@
 
     <!-- Heading -->
 
-    <h1>Dad's Double Whole Grain Pancakes</h1>
+    <h1>Double Whole Grain Pancakes</h1>
     <img src="../images/grain-pancakes.webp" alt="">
 
-    <h2>Dad's Double Whole Grain Pancakes Description</h2>
-    <p>My dad makes these pancakes. They are the BEST! It's prepared in 15 minutes, 20 minutes cook time and can yield to 28 pancakes. Enjoy!</p>
+    <h2>Double Whole Grain Pancakes Description</h2>
+    <p>They are the BEST! It's prepared in 15 minutes, 20 minutes cook time and can yield to 28 pancakes. Enjoy!</p>
 
     <!-- Description -->
 
