--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/grain-pancakes.html">Dad's Double Whole Grain Pancakes</a></li>
+        <li><a href="./recipes/grain-pancakes.html">Double Whole Grain Pancakes</a></li>
         <li><a href="./recipes/banana-bread.html">Banana Bread</a></li>
     </ul>
 </body>
