Add lasagna.html and Edit index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/grain-pancakes.html">Double Whole Grain Pancakes</a></li>
         <li><a href="./recipes/banana-bread.html">Banana Bread</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     </ul>
 </body>
 </html>
