--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
     <!-- Heading -->
 
     <h1>Lasagna</h1>
-    <img src="../images/banana-bread.webp" alt="">
+    <img src="../images/lasagna.jpeg" alt="">
 
     <h2>Lasagna Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
