Edit lasagna.html and banana-bread.html and grain-pancakes.html

--- a/recipes/grain-pancakes.html
+++ b/recipes/grain-pancakes.html
@@ -10,7 +10,7 @@
 
     <!-- Heading -->
 
-    <h1>Double Whole Grain Pancakes</h1>
+    <h1 id="heading">Double Whole Grain Pancakes</h1>
     <img src="../images/grain-pancakes.webp" alt="">
 
     <h2>Double Whole Grain Pancakes Description</h2>
@@ -43,5 +43,8 @@
         <br>
         <li>Heat a lightly oiled griddle or frying pan over medium heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. Cook until pancakes are golden brown on both sides; serve hot.</li>
     </ol>
+
+    <p><a href="#heading">Back to top</a></p>
+    <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
