--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     
     <!-- Heading -->
 
-    <h1>Lasagna</h1>
+    <h1 id="heading">Lasagna</h1>
     <img src="../images/lasagna.jpeg" alt="">
 
     <h2>Lasagna Description</h2>
@@ -71,5 +71,7 @@
         <li>Rest lasagna for 15 minutes before serving.</li>
     </ol>
 
+    <p><a href="#heading">Back to top</a></p>
+    <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
